# WADM

./: .gitignore  Cargo.toml  LICENSE  README.md  diagnose.sh
src/: main.rs  middleware.rs
src/api/: auth.rs  config.rs  db.rs  docker.rs  firewall.rs  mod.rs  monitor.rs  pkgmgr.rs  services.rs  system.rs  terminal.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: CircularProgress.tsx  Dashboard.tsx  Database.tsx  Docker.tsx  Firewall.tsx  Login.tsx  Packages.tsx  Services.tsx  Settings.tsx  Setup.tsx  SplitCircularProgress.tsx  SystemInfo.tsx  SystemUsage.tsx  Terminal.tsx
web/src/context/: AuthContext.tsx  ToastContext.tsx
web/src/types/: index.ts
