[package]
name = "wadm"
version = "0.96.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
env_logger = "0.11"
log = "0.4"
actix-files = "0.6.9"
bollard = "0.19.4"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
argon2 = "0.5"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
jsonwebtoken = "9.2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
actix-ws = "0.3.0"
portable-pty = "0.9.0"
